* Fixed: Empty top header bar displaying on Super User and Entrepreneur theme bases, when it should be hidden.
* Fixed: Mobile website header displaying with "Blank" page template; the website header should never display at all with this page template.
* Fixed: Minor HTML output issue when the theme filters the the WordPress core `[caption]` shortcode.
* Updated: Font Awesome to 5.6.3.

## 2.3.1 - 12/07/2018

* **Updated Theme Blvd framework to 2.8.1**
* Fixed: Missing theme stylesheets for bbPress, Gravity Forms, WooCommerce, and WPML.

## 2.3.0 - 12/06/2018

* **Updated Theme Blvd framework to 2.8.0**
* New: Basic WordPress 5+ block editor compatibility (i.e. Gutenberg).
	* Added default block stylesheet from WordPress.
	* Added basic, general support for new `alignwide` and `alignfull` options.
	* Matched media caption styling of blocks to default caption styling of theme.
	* Moved "Sidebar Layout" option to "Theme Layout" meta box, for editing both Posts and Pages.
* Improvement: Better spacing with Image elements, that are linked and have full-size images.
* Improvement: Better usage of `https` (instead of `http`) for things like share links, helper text, URL examples, etc.
* Fixed: Adding missing `base` key in `themeblvd_admin_module_caps` filtered array, so that the user capability of the Theme Bases admin page can be modified (see [tutorial](http://dev.themeblvd.com/tutorial/changing-user-role-access-for-admin-modules/)).
* Fixed: Milestone element animations not working when values contain commas.
* Fixed: Broken mobile menu navigation list background image, when using light background color.
* Fixed: Linking to `youtu.be` formatted links in a lightbox (sometimes) not working.
* Fixed: Misaligned checkbox on frontend comment form, when enabling *Settings > Discussion > Show comments cookies opt-in checkbox.*.
* Removed: Removed outdated style-editor.css file.
* Updated: Font Awesome to 5.5.0.

--------------------------------------------------------------
