@@ -997,63 +997,51 @@ ul.woocommerce-info {
 
 /* Post Review */
 #review_form p.stars {
-
-	display: inline-block;
-	margin: 5px -1px 10px -1px;
-
-	a {
-		color: #ddd;
-		position: relative;
-		height: 1em;
-		width: 1em;
-		font-size: 20px;
-    	margin: 0 1px;
-		text-indent: -999em;
-		display: inline-block;
-		text-decoration: none;
-
-		&::before {
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 1em;
-			height: 1em;
-			line-height: 1;
-			font-family: "WooCommerce";
-			content: '\e021';
-			text-indent: 0;
-		}
-
-		&:hover ~ a::before {
-			content: '\e021';
-			color: #ddd;
-		}
-	}
-
-	&:hover a::before {
-		content: '\e020';
-		color: #f4c069;
-	}
-
-	&.selected {
-		a.active {
-			&::before {
-				content: '\e020';
-				color: #f4c069;
-			}
-
-			~ a::before {
-				content: '\e021';
-				color: #ddd;
-			}
-		}
-
-		a:not( .active )::before {
-			content: '\e020';
-			color: #f4c069;
-		}
-	}
+  display: inline-block;
+  margin: 5px -1px 10px -1px;
+}
+#review_form p.stars a {
+  color: #ddd;
+  position: relative;
+  height: 1em;
+  width: 1em;
+  font-size: 20px;
+  margin: 0 1px;
+  text-indent: -999em;
+  display: inline-block;
+  text-decoration: none;
+}
+#review_form p.stars a::before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 1em;
+  line-height: 1;
+  font-family: "WooCommerce";
+  content: '\e021';
+  text-indent: 0;
+}
+#review_form p.stars a:hover ~ a::before {
+  content: '\e021';
+  color: #ddd;
+}
+#review_form p.stars:hover a::before {
+  content: '\e020';
+  color: #f4c069;
+}
+#review_form p.stars.selected a.active::before {
+  content: '\e020';
+  color: #f4c069;
+}
+#review_form p.stars.selected a.active ~ a::before {
+  content: '\e021';
+  color: #ddd;
+}
+#review_form p.stars.selected a:not(.active)::before {
+  content: '\e020';
+  color: #f4c069;
 }
 
 /* =Shop Pages
