@@ -6,6 +6,7 @@
 * Fixed: Empty top header bar displaying on Super User and Entrepreneur theme bases, when it should be hidden.
 * Fixed: Mobile website header displaying with "Blank" page template; the website header should never display at all with this page template.
 * Fixed: Minor HTML output issue when the theme filters the the WordPress core `[caption]` shortcode.
+* Fixed: Stars not displaying when a WooCommerce user is writing a review.
 * Updated: Font Awesome to 5.6.3.
 
 ## 2.3.1 - 12/07/2018
